<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_camera_alt_black_24dp"
            android:id="@+id/addItemImageButton"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/itemImage" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/itemNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/itemText" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/addItemImageButton"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/itemText" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/itemEdit"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="200dp" app:srcCompat="@android:drawable/ic_menu_report_image"
            android:id="@+id/itemImage" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:background="#8F7A7A7A"/>
    <TextView
            android:text="@string/holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/holderText" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/itemEdit" android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/holderEdit" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/holderText"/>
    <TextView
            android:text="@string/returnDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/returnDateText" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/holderEdit" android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/returnDateEdit" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@+id/returnDateText"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelCreateButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/createLend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/createConfirmButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="#FFC107"/>
</android.support.constraint.ConstraintLayout>